<resources>
    <string name="app_name">Songer</string>
    <string name="ttl_last_played">Last played</string>
    <string name="dsc_last_played">Last 100 played songs</string>
    <string name="ttl_bonfire_songs">Bonfire songs</string>
    <plurals name="dsc_bonfire_songs">
        <item quantity="one">%d bonfire song</item>
        <item quantity="other">%d bonfire songs</item>
    </plurals>
    <string name="ttl_abroad_songs">Abroad songs</string>
    <plurals name="dsc_abroad_songs">
        <item quantity="one">%d abroad song</item>
        <item quantity="other">%d abroad songs</item>
    </plurals>
    <string name="ttl_surprise_me">Surprise me</string>
    <string formatted="false" name="dsc_surprise_me">Song randomly selected from singer</string>
    <string name="ttl_all_songs">All songs</string>
    <plurals name="dsc_all_songs">
        <item quantity="one">All %d song</item>
        <item quantity="other">All %d songs</item>
    </plurals>
    <string name="ttl_patriotic">Patriotic songs</string>
    <plurals name="dsc_patriotic">
        <item quantity="one">%d patriotic song</item>
        <item quantity="other">%d patriotic songs</item>
    </plurals>
    <string name="ttl_favourite">Favourite songs</string>
    <plurals name="dsc_favourite">
        <item quantity="one">%d favourite song</item>
        <item quantity="other">%d favourite songs</item>
    </plurals>
    <string name="ttl_my_songs">My songs</string>
    <plurals name="dsc_my_songs">
        <item quantity="zero">You will find your added songs here</item>
        <item quantity="one">%d my song</item>
        <item quantity="other">%d my songs</item>
    </plurals>
    <string name="ttl_web">Songs from web</string>
    <string name="dsc_web">Search songs in the Internet</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="chords">Chords</string>
    <string name="similar_songs">Similar songs</string>
    <string name="slash">/</string>
    <string name="close">Close</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="chord">Chord</string>
    <string formatted="false" name="page_of_pages">%d of %d</string>
    <string name="settings_show_chords_ttl">Show chords</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="lyrics">Lyrics</string>
    <string name="save">Save</string>
    <string name="auto_recognize">Mark chords</string>
    <string name="ttl_save_changes">Save changes</string>
    <string name="msg_save_changes">Would you like to save changes before exit?</string>
    <string name="discard">Discard</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="add_song">Add song</string>
    <string name="settings_preferred_instrument_ttl">Preferred instrument</string>
    <string name="settings_preferred_theme_ttl">Preferred theme</string>
    <string name="settings_display_chords_msg">Display chords with song</string>
    <string name="got_it">Got it</string>
    <string name="tutorial_add_song">Tap on this icon to add new song to your songer</string>
    <string name="tutorial_shake_phone">Shake your phone to get random song from songer</string>
    <string name="tutorial_mark_chords">Tap on this icon to mark chords automatically with super powerful algorithm</string>
    <string name="tutorial_delete_song">Long press on song to delete it from your songer. You can always restore factory database with all your previously added song in settings.</string>
    <string name="settings_tonality">Tonality</string>
    <string name="downward">Downward</string>
    <string name="upward">Upward</string>
    <string name="song_details_transpose_error">Can\'t transpose chords. Try to edit chords marks</string>
    <string name="remove">Remove</string>
    <string name="ttl_remove_song">Remove song</string>
    <string name="msg_remove_song">Are you sure you want to remove this song from you Songer?</string>
    <string name="undo">Undo</string>
    <string name="song_was_deleted">Song %s was deleted</string>
    <string name="ttl_factory_reset">Factory reset</string>
    <string name="msg_factory_reset_short">Reset database to factory configurations</string>
    <string name="msg_factory_reset_long">Reset database to factory configurations. All previously added songs will be saved. After reset app will be relaunched.</string>
    <string name="msg_factory_reset_error">Can\'t reset database. Please go to \"Settings\" and clear storage manually. All previously added songs will be deleted.</string>
    <string name="reset">Reset</string>
    <string name="preferences_sign_in_title">Sign in with Google</string>
    <string name="preferences_sign_in_description">You can sign in to share your favourite song with community</string>
    <string name="preferences_you_are_signed_in">You are logged in as:</string>
    <string name="err_empty_list">Sorry, we can\'t find anything</string>
    <string name="msg_web_search">Web results will be displayed here</string>
</resources>
