<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_bookmark"
        android:icon="@drawable/ic_bookmark_border"
        android:title="@string/bookmark"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/app_bar_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/app_bar_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/app_bar_remove"
        android:icon="@drawable/ic_delete"
        android:title="@string/remove"
        app:showAsAction="never" />
    <item
        android:id="@+id/app_bar_show_chords"
        android:checkable="true"
        android:title="@string/settings_show_chords_ttl"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_bar_transposition"
        android:title="@string/settings_tonality"
        app:showAsAction="never" />
</menu>